<?xml version="1.0"?>
<package>
  <name>abb_communication_interface</name>
  <version>0.0.1</version>
  <description>abb communication interface using ros_control interface</description>

  <maintainer email="jjhu1993@gmail.com">jjhu</maintainer>
  <license>BSD</license>

  <author email="jjhu1993@gmail.com">jjhu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>simple_message</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>simple_message</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
