<?xml version="1.0"?>
<package format="2">
  <name>abb_description</name>
  <version>0.0.1</version>
  <description>The abb yumi description package</description>

  <maintainer email="jjhu1993@gmail.com">jjhu</maintainer>
  <license>BSD</license>

  <author email="jjhu1993@gmail.com">jjhu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
