<?xml version="1.0"?>
<package>
  <name>abb_launch</name>
  <version>0.0.1</version>
  <description>The abb yumi launch package</description>

  <maintainer email="jjhu1993@gmail.com">jjhu</maintainer>
  <license>BSD</license>

  <author email="jjhu1993@gmail.com">jjhu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>abb_description</build_depend>
  <build_depend>abb_communication_interface</build_depend>
  <run_depend>abb_description</run_depend>
  <run_depend>abb_communication_interface</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
